manifests/picard/base/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: picard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picard
  template:
    metadata:
      labels:
        app: picard
    spec:
      containers:
        - name: picard
          image: mikenye/picard:latest
          ports:
            - name: http
              containerPort: 5800
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /storage
          resources: {}
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-picard
        - name: music
          persistentVolumeClaim:
            claimName: pvc-nfs-picard-music

---
apiVersion: v1
kind: Service
metadata:
  name: picard
spec:
  selector:
    app: picard
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: picard
  labels:
    app: picard
spec:
  ingressClassName: nginx-private
  rules:
    - host: picard.lan.stamx.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: picard
                port:
                  name: http
  tls:
    - hosts:
        - picard.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl
